#1045: Run build with Java 16